--- a/var/langs/ru/addons/ee_hide_order_status (programmer conflicted copy 2022-04-08 09 25 33).po
+++ b/var/langs/ru/addons/ee_hide_order_status (programmer conflicted copy 2022-04-08 09 25 33).po
@@ -10,7 +10,7 @@ msgstr "[efimchenko.ru] Скрыть статусы заказа"
 
 msgctxt "Addons::description::ee_hide_order_status"
 msgid "ee_hide_order_status_description"
-msgstr "Модуль скрывает статусы заказа согласно выставленным настройкам."
+msgstr "Модуль скрывает статусы заказа согласно его настройкам."
 
 msgctxt "SettingsSections::ee_hide_order_status::general"
 msgid "ee_hide_order_status_general"
